// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs disabled navigation item is rendered 1`] = `
.c5 {
  margin: 0;
  padding: 1rem 0 1rem 0;
  box-sizing: border-box;
}

.c0 {
  width: 100%;
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

.c1 {
  margin: 0;
  padding: 0;
  width: 100%;
  list-style: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: flext-start;
  -webkit-justify-content: flext-start;
  -ms-flex-pack: flext-start;
  justify-content: flext-start;
  border-bottom: 2px solid #e5e5e5;
  box-sizing: border-box;
}

.c2 {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  white-space: nowrap;
}

.c3 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  padding: 0.694rem 1rem 0.694rem 1rem;
  display: inline-block;
  cursor: pointer;
  font-size: 1rem;
  font-weight: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  line-height: 1;
  vertical-align: middle;
  margin: 0 0 -2px 0;
  border-bottom: 2px solid #000000;
}

.c3:hover,
.c3:active {
  border-bottom: 2px solid #000000;
}

.c4 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  padding: 0.694rem 1rem 0.694rem 1rem;
  display: inline-block;
  cursor: pointer;
  font-size: 1rem;
  font-weight: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  line-height: 1;
  vertical-align: middle;
  margin: 0 0 -2px 0;
  border-bottom: 2px solid transparent;
  color: #ccc !important;
}

.c4:hover,
.c4:active {
  border-bottom: 2px solid #e5e5e5;
}

<div>
  <div
    className="c0"
  >
    <ul
      className="c1"
    >
      <li
        className="c2"
      >
        <a
          className="c3"
          onClick={[Function]}
        >
          
        </a>
      </li>
      <li
        className="c2"
      >
        <a
          className="c4"
          onClick={[Function]}
        >
          
        </a>
      </li>
    </ul>
    <div
      className="c5"
      disabled={false}
      title=""
    />
  </div>
</div>
`;

exports[`Tabs navigation is rendered 1`] = `
.c5 {
  margin: 0;
  padding: 1rem 0 1rem 0;
  box-sizing: border-box;
}

.c0 {
  width: 100%;
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

.c1 {
  margin: 0;
  padding: 0;
  width: 100%;
  list-style: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: flext-start;
  -webkit-justify-content: flext-start;
  -ms-flex-pack: flext-start;
  justify-content: flext-start;
  border-bottom: 2px solid #e5e5e5;
  box-sizing: border-box;
}

.c2 {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  white-space: nowrap;
}

.c3 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  padding: 0.694rem 1rem 0.694rem 1rem;
  display: inline-block;
  cursor: pointer;
  font-size: 1rem;
  font-weight: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  line-height: 1;
  vertical-align: middle;
  margin: 0 0 -2px 0;
  border-bottom: 2px solid transparent;
}

.c3:hover,
.c3:active {
  border-bottom: 2px solid #ccc;
}

.c4 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  padding: 0.694rem 1rem 0.694rem 1rem;
  display: inline-block;
  cursor: pointer;
  font-size: 1rem;
  font-weight: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  line-height: 1;
  vertical-align: middle;
  margin: 0 0 -2px 0;
  border-bottom: 2px solid #000000;
}

.c4:hover,
.c4:active {
  border-bottom: 2px solid #000000;
}

<div>
  <div
    className="c0"
  >
    <ul
      className="c1"
    >
      <li
        className="c2"
      >
        <a
          className="c3"
          onClick={[Function]}
        >
          
        </a>
      </li>
      <li
        className="c2"
      >
        <a
          className="c4"
          onClick={[Function]}
        >
          
        </a>
      </li>
    </ul>
    <div
      className="c5"
      disabled={false}
      title=""
    />
  </div>
</div>
`;

exports[`Tabs navigation is rendered with custom padding 1`] = `
.c4 {
  margin: 0;
  padding: 1rem 0 1rem 0;
  box-sizing: border-box;
}

.c0 {
  width: 100%;
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

.c1 {
  margin: 0;
  padding: 0;
  width: 100%;
  list-style: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: flext-start;
  -webkit-justify-content: flext-start;
  -ms-flex-pack: flext-start;
  justify-content: flext-start;
  border-bottom: 2px solid #e5e5e5;
  box-sizing: border-box;
}

.c2 {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  white-space: nowrap;
}

.c3 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  padding: xl;
  display: inline-block;
  cursor: pointer;
  font-size: 1rem;
  font-weight: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  line-height: 1;
  vertical-align: middle;
  margin: 0 0 -2px 0;
  border-bottom: 2px solid #000000;
}

.c3:hover,
.c3:active {
  border-bottom: 2px solid #000000;
}

<div>
  <div
    className="c0"
  >
    <ul
      className="c1"
    >
      <li
        className="c2"
      >
        <a
          className="c3"
          onClick={[Function]}
        >
          
        </a>
      </li>
    </ul>
    <div
      className="c4"
      disabled={false}
      title=""
    />
  </div>
</div>
`;

exports[`TabsItem is rendered 1`] = `
.c0 {
  margin: 0;
  padding: 1rem 0 1rem 0;
  box-sizing: border-box;
}

<div>
  <div
    className="c0"
    disabled={false}
    title="Item"
  />
</div>
`;

exports[`TabsItem is rendered with custom padding 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

.c1 {
  margin: 0;
  padding: 1rem;
  box-sizing: border-box;
}

.c2 {
  margin: 0;
  padding: xs;
  box-sizing: border-box;
}

.c3 {
  margin: 0;
  padding: smrem xsrem smrem xsrem;
  box-sizing: border-box;
}

.c4 {
  margin: 0;
  padding: xsrem xlrem lgrem smrem;
  box-sizing: border-box;
}

.c5 {
  margin: 0;
  padding: xs;
  box-sizing: border-box;
}

@media only screen and (min-width:48rem) {
  .c5 {
    padding: sm;
  }
}

@media only screen and (min-width:64rem) {
  .c5 {
    padding: lg;
  }
}

@media only screen and (min-width:75rem) {
  .c5 {
    padding: xl;
  }
}

<div>
  <div
    className="c0"
    disabled={false}
    title="Item"
  />
  <div
    className="c1"
    disabled={false}
    title="Item"
  />
  <div
    className="c2"
    disabled={false}
    title="Item"
  />
  <div
    className="c3"
    disabled={false}
    title="Item"
  />
  <div
    className="c4"
    disabled={false}
    title="Item"
  />
  <div
    className="c5"
    disabled={false}
    title="Item"
  />
</div>
`;
